--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/sortablejs": "^1.10.6",
     "@types/speakingurl": "^13.0.2",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
+    "@uiw/react-md-editor": "^3.12.1",
     "@webscopeio/react-textarea-autocomplete": "^4.8.1",
     "axios": "^0.21.2",
     "bs58": "^4.0.1",
@@ -29,6 +30,8 @@
     "currency-symbol-map": "^4.0.4",
     "debounce": "^1.2.1",
     "diff-match-patch": "^1.0.5",
+    "electron": "13.6.9",
+    "electron-updater": "^5.0.1",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "history": "^4.7.2",
@@ -39,6 +42,7 @@
     "i18next-browser-languagedetector": "^4.2.0",
     "immutability-helper": "^3.0.2",
     "js-cookie": "^2.2.1",
+    "markdown-it": "^13.0.0",
     "medium-zoom": "^1.0.6",
     "moment": "^2.26.0",
     "node-cache": "^5.1.0",
@@ -55,9 +59,11 @@
     "react-helmet": "^6.0.0",
     "react-highcharts": "^16.1.0",
     "react-img-webp": "^2.0.2",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-popper": "^2.2.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
+    "react-select": "^5.3.0",
     "react-sortablejs": "^2.0.11",
     "redux": "4.0.5",
     "redux-thunk": "^2.3.0",
@@ -65,6 +71,7 @@
     "serialize-javascript": "^3.1.0",
     "sortablejs": "^1.13.0",
     "speakingurl": "^14.0.1",
+    "styled-components": "^5.3.5",
     "xss": "^1.0.8"
   },
   "devDependencies": {
@@ -73,6 +80,7 @@
     "@types/express": "^4.17.0",
     "@types/jest": "^26.0.24",
     "@types/js-cookie": "^2.2.6",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^12.6.6",
     "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.8.23",
@@ -83,6 +91,7 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/react-test-renderer": "^16.9.2",
     "@types/serialize-javascript": "^1.5.0",
+    "@types/styled-components": "^5.1.25",
     "@types/webpack-env": "^1.14.0",
     "babel-preset-razzle": "^4.0.5",
     "html-webpack-plugin": "4.5.2",
