--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "debounce": "^1.2.1",
     "diff-match-patch": "^1.0.5",
     "express": "^4.17.1",
+    "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "history": "^4.7.2",
     "hive-uri": "^0.2.3",
@@ -39,6 +40,7 @@
     "i18next-browser-languagedetector": "^4.2.0",
     "immutability-helper": "^3.0.2",
     "js-cookie": "^2.2.1",
+    "markdown-it": "^13.0.1",
     "medium-zoom": "^1.0.6",
     "moment": "^2.26.0",
     "node-cache": "^5.1.0",
@@ -49,12 +51,14 @@
     "query-string": "^6.13.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^3.2.0",
     "react-helmet": "^6.0.0",
     "react-highcharts": "^16.1.0",
     "react-img-webp": "^2.0.2",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-popper": "^2.2.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
