--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "query-string": "^6.13.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
-    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^4.8.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^3.2.0",
@@ -83,6 +83,8 @@
     "@types/node": "^12.6.6",
     "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.8.23",
+    "@types/react-bootstrap-date-picker": "^4.0.9",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^6.0.0",
     "@types/react-highcharts": "^16.0.3",
